tcm/gw/argcod-gv-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argcod-gateway
  namespace: argcod
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - hosts:
        - argcod.test.com
      port:
        name: HTTP-80
        number: 80
        protocol: HTTP
