tcm/gw/argocd-gv-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: argocd-gateway
  namespace: argocd
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - hosts:
        - argocd.test.com
      port:
        name: HTTP-80
        number: 80
        protocol: HTTP
