tcm/gw/blog-gv-istio.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: blog-web-gateway
  namespace: dev
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - hosts:
        - traefik.test.com
      port:
        name: HTTP-80
        number: 80
        protocol: HTTP

## kubectl get -n dev gateways.networking.istio.io
