tcm/gw/blog-gw.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: blog-web-gateway
  namespace: dev  # namespace where the gateway is deployed
spec:
  gatewayClassName: traefik-gateway-class
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
